@@ -10,6 +10,7 @@ Issue #1099528 by mikeker: Radio button labels not displayed
 Issue #1128688 by sreynen: Select All/None not working on nested checkboxes
 Issue #1111712 by mikeker: Adds Links as an option for filters
 mikeker: Fixed attributes, select all/none issues
+Issue #1120244 by mikeker: Fixed collapsible filter options
 
 Better Exposed Filters 6.x-x.x  xxxx-xx-xx
 ------------------------------------------
